<resources>
    <string name="app_name">AppEventia</string>

    <string name="main_subtitle">Your event app</string>
    <string name="button_events">Events</string>
    <string name="button_favorites">Favorites</string>
    <string name="button_map">Map</string>
    <string name="button_profile">Profile</string>

    <string name="events_title">Events</string>
    <string name="search_events">Search events</string>

    <string name="favorites_title">Favorites</string>
    <string name="delete">Delete</string>
    <string name="edit_comment">Edit comment</string>
    <string name="no_comments">No comments</string>

    <string name="add_to_favorites">Add to favorites</string>
    <string name="view_venue_on_map">View venue on map</string>
    <string name="description">Description</string>

    <string name="dialog_edit_comment">Edit comment</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_comment_hint">Write a comment</string>
    <string name="toast_comment_updated">Comment updated</string>
    <string name="toast_favorite_added">Event added to favorites</string>
    <string name="toast_favorite_exists">This event is already in favorites</string>
    <string name="toast_favorite_deleted">Favorite deleted</string>

    <string name="enable_notifications">Enable notifications</string>
    <string name="save_changes">Save changes</string>

    <string name="button_artists">Artists</string>
    <string name="artists_title">Artists</string>

    <string name="button_reservations">Reservations</string>
    <string name="reservations_title">Reservations</string>

    <string name="edit_event">Edit event</string>
    <string name="create_event">Create event</string>

    <string name="event_form_title">Event form</string>
    <string name="event_name_hint">Name</string>
    <string name="event_description_hint">Description</string>
    <string name="event_date_hint">Date: 2026-06-01</string>
    <string name="event_time_hint">Time: 20:00</string>
    <string name="event_price_hint">Price</string>
    <string name="event_capacity_hint">Maximum capacity</string>
    <string name="event_available_tickets_hint">Available tickets</string>
    <string name="event_category_hint">Category</string>
    <string name="artist_label">Artist</string>
    <string name="venue_label">Venue</string>
    <string name="event_in_person">In person</string>
    <string name="event_cancelled">Cancelled</string>
    <string name="save_event">Save event</string>

</resources>